--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
+    "dev": "nodemon bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "fire7ly",
   "license": "ISC",
   "dependencies": {
+    "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.18.2"
   }
