--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "fire7ly",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.18.2"
