--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.18.2"
