--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "fire7ly",
   "license": "ISC",
   "dependencies": {
+    "@felipebutcher/node-os-info": "^0.0.6",
     "axios": "^1.1.3",
+    "check-disk-space": "^3.3.1",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "qrcode-terminal": "^0.12.0",
