--- a/.env_sample
+++ b/.env_sample
@@ -1,1 +1,1 @@
-WEATHER_API_TOKEN=YOUR_OPENWEATHER_API  // Get it from openweathermap.org
+WEATHER_API_TOKEN = YOUR_OPENWEATHER_API  // Get it from openweathermap.org
